<resources>
    <string name="app_name">Easy Tracker</string>
    <string name="title_activity_maps">Easy Tracker</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_phone_number">Invalid Phone Number!</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_temp">Temp</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <!-- Login Fragment -->
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="get_otp">Get OTP</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="please_enter_details">Please enter your details!</string>

    <!-- Job List Fragment -->
    <string name="hello_contractor">Hello, Contractor!</string>
    <string name="all_jobs">All Jobs</string>
    <string name="start_new_job">Start New Job</string>
    <string name="resume_job">Resume Job</string>
    <string name="history">History</string>

    <!-- New Job Details Fragment -->
    <string name="start_job">Start Job</string>
    <string name="job_id">JOB ID</string>
    <string name="time">Time</string>
    <string name="location">LOCATION:</string>
    <string name="status">STATUS</string>
    <string name="enter_company_name">Enter Company Name</string>
    <string name="company_name">Company Name</string>

    <!-- Job Details -->
    <string name="end_job">End Job</string>
    <string name="start">Start</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>