<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tv_title_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/hello_contractor"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_all_jobs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/all_jobs"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tv_title_hello"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_hello" />

    <TextView
        android:id="@+id/tv_uid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_title_all_jobs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_title_all_jobs"
        tools:text="d12s21qwe124" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@id/btn_start_new_job"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_all_jobs">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/tv_title_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="24sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_job_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:scrollbars="vertical"
                tools:listitem="@layout/model_job" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_start_new_job"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:background="@color/design_default_color_on_secondary"
        android:text="@string/start_new_job"
        android:textColor="@color/design_default_color_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>