<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_on_secondary">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_start_job"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_title_job_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/job_id"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_job_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/tv_title_job_id"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_job_id"
                tools:text="08/10/2020" />

            <TextView
                android:id="@+id/tv_job_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="TextView"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="@+id/tv_job_date"
                app:layout_constraintTop_toBottomOf="@+id/tv_job_date"
                tools:text="#6969" />

            <TextView
                android:id="@+id/tv_title_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/time"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/tv_job_id"
                app:layout_constraintTop_toBottomOf="@+id/tv_job_id" />

            <TextView
                android:id="@+id/tv_title_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                android:text="@string/location"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/tv_title_time"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_time" />

            <TextView
                android:id="@+id/tv_title_location2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="86dp"
                android:text="@string/status"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/tv_title_location"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_location" />

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="@+id/tv_title_location2"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_location2"
                tools:text="IN PROGRESS" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_start_job"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="86dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="62dp"
        android:background="@drawable/btn_round"
        android:text="@string/start_job"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>